2009-01-23  Alejandro G. Castro  <alex@igalia.com>

	Patch contributed by: Artem Egorkine <ext-artem.egorkine@nokia.com>

	* src/Makefile.am,
	* src/hildon.h,
	* src/hildon-animation-actor.c,
	* src/hildon-animation-actor.h: Added the animation actor class,
	this widget represents an animation actor for WM-assisted
	animation effects in the Hildon framework.

2009-01-23  Alberto Garcia  <agarcia@igalia.com>

	* src/hildon-window-stack-private.h
	* src/hildon-window-stack.c
	* src/hildon-stackable-window.c (hildon_stackable_window_show):
	Avoid calling gtk_widget_show() again indirectly from
	hildon_stackable_window_show()

2009-01-22  Claudio Saavedra  <csaavedra@igalia.com>

	* src/hildon-time-selector.c: (hildon_time_selector_constructor),
	(hildon_time_selector_init): Move the construction of the hours and
	ampm columns to the constructor to preserve the order the columns
	are appended.

2009-01-22  Claudio Saavedra  <csaavedra@igalia.com>

	* src/hildon-picker-dialog.c:
	(hildon_picker_dialog_class_init): Connect a realize method.
	(+hildon_picker_dialog_realize): Setup the interaction mode here
	and not before.
	(hildon_picker_dialog_show): Do not call setup_interaction_mode()
	yet, do it during the realize instead.
	(_on_dialog_response):
	(_hildon_picker_dialog_set_selector): Do not call setup_interaction_mode()
	if the widget is not realized, to avoid the dialog response before it
	is even shown.

	Avoid premature responses in the HildonPickerDialog that can cause it
	to be hidden before it's even shown.

2009-01-22  Claudio Saavedra  <csaavedra@igalia.com>

	* src/hildon-picker-dialog.c: (hildon_picker_dialog_show),
	(on_selector_columns_changed), (requires_done_button),
	(+prepare_action_area), (setup_interaction_mode),
	(_hildon_picker_dialog_set_selector):

	Split the interaction mode setup into preparation of the
	action area (prepare_action_area()) and the connection of
	the signals in setup_interaction_mode() and update the code to
	reflect this.
